--- a/work.css
+++ b/work.css
@@ -8,6 +8,9 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 html{
@@ -24,6 +27,10 @@ body{
   animation: entrance 1.5s ease-in;
 }
 
+.desktop{
+  display:none;
+  border:1px solid;
+}
 
 /*ANIMATION*/
 @keyframes entrance{
@@ -60,17 +67,18 @@ body{
 /*MAIN ELEMENT*/
 a {
   text-decoration: none;
+  color:rgb(56, 56, 56);
 }
 /*SITE TITLE*/
-.site-title{
+header{
   font-size: 2.75rem;
   letter-spacing: -2.5px;
   font-family: 'Playfair Display', serif;
   font-weight: 100;
   padding:0;
   text-align: center;
-  margin:0;
   color:rgb(56, 56, 56);
+  padding-top:1rem;
 }
 
 /*NAVIGATION*/
@@ -79,7 +87,6 @@ nav{
   gap:0.5rem;
   justify-content: center;
   margin-top:1rem;
-  
 }
 
 nav a{
@@ -107,7 +114,6 @@ nav .inactive:hover{
   display:flex;
   justify-content: center;
   margin-top:1rem;
-
 }
 
 .logo-container{
@@ -125,19 +131,46 @@ nav .inactive:hover{
 }
 
 /*IMAGE CONTENT*/
-.image-container{
-  height:475px;
+
+.slider-container {
+  height: 65vh;
+  display: inline-flex;
+  overflow: hidden;
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
+  cursor: grab;
+
+}
+
+.slide {
+  max-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  display:grid;
+  padding: 0.75rem;
+  user-select: none;
+
+}
+
+.slide img {
+  max-width: 100%;
+  max-height: 100%;
+  transition: transform 0.3s ease-in-out;
 }
 
 
-.content img{
-  width:327px;
+
+.grabbing {
+  cursor: grabbing;
 }
 
-.image-description{
+.grabbing .slide img {
+  transform: scale(0.9);
+}
+
+.copyright{
   font-family: 'Montserrat', sans-serif;
   font-size:0.5rem;
   letter-spacing: 2px;
@@ -148,126 +181,94 @@ nav .inactive:hover{
 .btn-container{
   display:flex;
   justify-content: center;
-  gap:1rem;
+  gap:3rem;
   align-items: center;
+  margin-bottom:1.5rem;
 }
-
+button{
+  background-color: transparent;
+  border:none;
+  display:flex;
+  align-items:center;
+}
 .btn-container img{
-  width:20px;
+  width:10px;
   cursor: pointer;
-}
-
-.btn-container p{
-  font-family: 'Playfair Display', serif;
-  font-size:0.85rem;
   color:rgb(111, 111, 111);
 }
 
-/*RESPONSIVENESS*/
-@media(min-width:700px){
-  .image-container{
-    height:520px;
-    }
 
-    .content img{
-      height:430px;
-      width:auto;
-    }
-}
 
-@media(min-width:1024px){
-  .all-container{
-    display:grid;
-    grid-template-columns: 20% 80%;
-  }
-
-  .first-column{
-    display:grid;
-    grid-template-rows:20% 80%;
-    padding:2rem 0 0 0;
-    justify-content: center;
-    align-items:stretch;
-    height:100%;
-  }
-
+@media(min-width:1280px){
+  /*SITE TITLE*/
+  
   header{
-    align-items: flex-start;
-  }
-  .site-title{
+    position:absolute;
+    left:-2rem;
+    padding:1rem;
+    width:275px;
     line-height: 3rem;
     font-size: 3rem;
   }
 
-  nav{
-    display:grid;
-    text-align: center;
-    gap:1.25rem;
-  }
-
   nav a{
-    border:none;
-
-  } 
+    margin-top:2rem;
+  }
 
   .socialmedia-container{
-    margin-top: 1.5rem;
-  }
-
-  .image-container{
-  height:520px;
-  }
-
-  .content img{
-    height:430px;
-    width:auto;
-  }
-}
-
-@media(min-width:1280px){
-  .all-container{
-    grid-template-columns: 20% 80%;
-  }
-
-   .site-title{
-    font-size: 4rem;
-    line-height: 4rem;
-  }
-
-  nav a{
-    font-size: 0.75rem;
+    position:absolute;
+    top:2rem;
+    right:2rem;
   }
   
-  .image-container{
-  height:700px;
+  .slider-container {
+    height: 70vh;
+    margin-top:1.5rem;
   }
 
-  .content img{
-    height:550px;
-    width:auto;
-  }
 
-  .image-description{
-    font-size: 0.75rem;
+  .prevBtn{
+    position:absolute;
+    left:5%;
+    top:45%;
+  }
+  .nextBtn{
+    position:absolute;
+    right:5%;
+    top:45%;
+  }
+  .btn-container img{
+  width:30px;
+  }
+}
+@media(min-width:1280px){
+  nav a{
+    font-size:0.7rem;
   }
 }
 
 @media(min-width:1440px){
-  .all-container{
-    grid-template-columns: 20% 80%;
+  /*SITE TITLE*/
+  
+  header{
+    left:-1rem;
+    line-height: 4rem;
+    font-size: 4rem;
   }
 
-  .site-title{
-    margin:0;
-  }
-
-  .image-container{
-  height:730px;
+  .socialmedia-container{
+    right:3rem;
   }
   
-  .content img{
-    height:640px;
-    width:auto;
+  .slider-container {
+    height: 80vh;
+  }
+
+  .btn-container img{
+  width:50px;
   }
 }
+
+
 
 
