--- a/work.css
+++ b/work.css
@@ -10,12 +10,13 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  
+  overflow-x: hidden;
 }
 
 html{
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 /*
