--- a/work.css
+++ b/work.css
@@ -24,7 +24,7 @@ Overflow is hidden to hide content outside monitor
 */
 body{
   background: white;
-  overflow-x: hidden;
+  overflow: hidden;
   animation: entrance 1.5s ease-in;
 }
 
@@ -168,7 +168,7 @@ nav .inactive:hover{
 }
 
 .grabbing .slide img {
-  transform: scale(0.9);
+  transform: scale(0.975);
 }
 
 .copyright{
